// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryInstructions renders with a custom value 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
      foobar
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with a custom value 2`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
      foobar
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with a disabled input element 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
              disabled
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with a disabled input element 2`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
              disabled
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with an error 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea o-forms-input--invalid">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with an error 2`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea o-forms-input--invalid">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with default props 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with default props 2`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with maxlength 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              maxlength="200"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with maxlength 2`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              maxlength="200"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with rows 1`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              rows="20"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;

exports[`DeliveryInstructions renders with rows 2`] = `
<label id="deliveryInstructionsField"
       class="o-forms-field o-forms-field--optional"
       data-validate="required"
       for="deliveryInstructions"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      Delivery instructions
    </span>
    <span class="o-forms-title__prompt">
      For newspaper delivery, we can only deliver to the ground floor, so if you live in an apartment, we’ll leave the newspaper at reception or by the entrance. We deliver in the early hours of the morning so our drivers won’t be able to contact you or ring your doorbell.
    </span>
    <span class="o-forms-title__prompt">
      If your property requires security codes that will help our drivers deliver your newspaper safely, please do not add them here as they may be printed on your newspaper label. If you do add them here you do so at your own risk as these will appear on your label.
    </span>
  </span>
  <span class="o-forms-input o-forms-input--textarea">
    <textarea id="deliveryInstructions"
              name="deliveryInstructions"
              rows="20"
              data-trackable="field-deliveryInstructions"
              placeholder="test"
    >
    </textarea>
  </span>
</label>
`;
